components/rook-ceph/rook-ceph-cluster/http-route.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: rook-ceph-dashboard
  labels:
    app.kubernetes.io/instance: rook-ceph
    app.kubernetes.io/name: rook-ceph
  annotations:
    gethomepage.dev/href: "https://rook.${CLUSTER_DOMAIN}"
    gethomepage.dev/enabled: "true"
    gethomepage.dev/group: Ingress
    gethomepage.dev/icon: https://cdn.jsdelivr.net/gh/selfhst/icons/png/rook-ceph.png
spec:
  parentRefs:
    - name: ${GATEWAY_NAME}
      namespace: ${GATEWAY_NAMESPACE}
      sectionName: https
  hostnames: ["rook.${CLUSTER_DOMAIN}"]
  rules:
    - backendRefs:
        - name: rook-ceph-mgr-dashboard
          port: 7000
